# Development dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

# Production dependencies
[tool.poetry.dependencies]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pluk"
version = "0.3.2"
description = "Symbol lookup / search engine CLI"
readme = "README.md"
requires-python = ">=3.13.5"
license = { text = "MIT" }
authors = [
  { name = "Justus Jones", email = "Justus1274@gmail.com" }
]
keywords = ["symbol","search","cli","index","lookup"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
pluk = "pluk.bootstrap:main"
plukd = "pluk.cli:main"

[tool.poetry]
name = "pluk"
version = "0.3.2"
description = "Symbol lookup / search engine CLI"
authors = ["Justus Jones <Justus1274@gmail.com>"]
packages = [{ include = "pluk", from = "src" }]

[tool.bumpver]
current_version = "0.3.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]

