[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pluk"
version = "0.3.7"
description = "Symbol lookup / search engine CLI"
readme = "README.md"
requires-python = ">=3.13.5"
license = "MIT"
authors = [
  { name = "Justus Jones", email = "Justus1274@gmail.com" }
]
keywords = ["symbol","search","cli","index","lookup"]

dependencies = [
  "requests>=2.31",
  "redis>=5.0",
  "colorama>=0.4"
]

[project.optional-dependencies]
api    = ["fastapi>=0.116", "uvicorn[standard]>=0.35", "tree_sitter>=0.21", "tree_sitter_languages>=0.21"]
worker = ["celery>=5.3", "gitpython>=3.1"]
db     = ["psycopg[binary,pool]>=3.1"]

[project.scripts]
pluk = "pluk.shim:main"
plukd = "pluk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.bumpver]
current_version = "v0.3.7"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"'
]

